--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 
 
 .main-nav {
-	display: flex;
+	display: inline-flex;
 	list-style: none;
 }
 
@@ -19,6 +19,15 @@ html {
 	display: inline-flex;
 	padding-right: 2.5rem;
 	margin-left: auto;
+	color: #99bad0;
+}
+
+.navbar-light .navbar-nav .nav-link {
+	color: #99bad0;
+}
+
+ul {
+	margin-bottom: 0rem;
 }
 
 li {
@@ -59,4 +68,22 @@ a {
 	display: grid;
 	width: 15px;
 	height: 15px;
+}
+
+@media only screen and (max-width: 991px) {
+	.main-nav {
+		font-size: 1rem;
+	}
+	#logo {
+		width: 45px;
+		height: 35px;
+	}
+}
+
+.navbar button {
+	display: inline-flex;
+}
+
+.navbar button.navbar-toggler {
+	border: 1px solid #90bad0;
 }
