10th git commit for soundgasm web app
commit showing update to the new music today page and also showing the new "top charts page"

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav .logo a{
 
 
 nav:hover{
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 nav:hover .logo a{
@@ -176,7 +176,7 @@ nav img.menu-icons{
     padding-top: 70px;
 }
 
-.releases h1{
+.releases h2{
     font-size: 36px;
     font-weight: 700;
 }
@@ -201,6 +201,8 @@ div.carousel-cell{
     margin-right: 10px;
     overflow: hidden;
     counter-increment: gallery-cell;
+    border-radius: 15px;
+    border-bottom: 2px solid #333;
 }
 
 .carousel-cell img{
@@ -208,19 +210,136 @@ div.carousel-cell{
     height: 400px;
     border-radius: 15px;
     object-fit: cover;   /*To make image fit into box size and maintain near original look*/
+    border-bottom: 2px solid #333;
 }
 
-/* img.newMusic{
+div.newMusic{
+    position: relative;
     width: 100%;
-    height: 30px;
-    background: #fff;
-    color: #333;
-    text-align: left;
-    padding: 4px;
-    position: absolute;
-    bottom: 0;
-} */
+    height: 80px;
+    background: linear-gradient(rgba(0,5,0,0.9),rgba(0, 10, 25, 0.8));
+    /* background-color: linear-gradient(rgba(255,250,238,0.7),rgba(255,255,255,0.7)); */
+    color: #fff;
+    bottom: 80px;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 15px;
+    border: 2px solid #333;
+}
 
+div.newMusic span{
+    position: absolute;
+    bottom: 42px;
+    right: 0;
+    width: 100%;
+    margin: auto;
+    margin-top: 50px;
+}
+
+div.carousel-cell div.newMusic .star{
+    position: relative;
+    top: 40%;
+    width: 40%;
+    height: 30%;
+    object-fit: contain;
+    margin: auto;
+    margin-top: 6px;
+    border-bottom: 0px;
+}
+
+/***************Top charts page********************/
+
+.charts{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 70px;
+}
+
+.charts h3{
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.charts p{
+    color: rgb(95, 95, 95);
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 16px;
+    padding: 10px;
+}
+
+div.top-songs{
+    width: 100%;
+    height: 500px;
+    margin: auto;
+    margin-top: 4%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+div.gospel-hip{
+    width: 66%;
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 10px;
+    margin-right: auto;
+    overflow: hidden;
+}
+
+div.gospel{
+    width: 50%;
+}
+
+div.gospel img{
+    width: 100%;
+    height: 250px;
+    border-radius: 15px;
+    padding: 5px;
+}
+
+div.hip-hop{
+    width: 50%;
+}
+
+div.hip-hop img{
+    width: 100%;
+    height: 250px;
+    border-radius: 15px;
+    object-fit: cover;  /*To make image fit into box size and maintain near original look*/
+    padding: 5px;
+}
+
+div.jazz{
+    width: 66%;
+    display: flex;
+}
+
+div.jazz img{
+    width: 100%;
+    height: 250px;
+    border-radius: 15px;
+    object-fit: cover;    /*To make image fit into box size and maintain near original look*/
+    padding: 5px;
+    position: relative;
+    top: -99%;
+}
+
+div.rnb{
+    width: 33%;
+    display: flex;
+    margin-right: auto;
+}
+
+div.rnb img{
+    width: 100%;
+    height: 500px;
+    border-radius: 15px;
+    padding: 5px;
+    margin-right: auto;
+}
 
 
 
@@ -311,7 +430,7 @@ div.carousel-cell{
         padding-top: 40px;
     }
 
-    .releases h1{
+    .releases h2{
         font-size: 24px;
     }
 
@@ -323,6 +442,7 @@ div.carousel-cell{
 
     /*Adding sliding carousel to New music page*/
     div.carousel-cell{
+        width: 80%;
         height: 200px;
         margin-right: 5px;
     }
@@ -330,6 +450,21 @@ div.carousel-cell{
     .carousel-cell img{
         height: 200px;
         border-radius: 10px;
+    }
+
+    div.newMusic{
+        height: 55px;
+        bottom: 55px;;
+    }
+
+    div.newMusic span{
+        font-size: 12px;
+        bottom: 28px;
+    }
+
+    div.carousel-cell div.newMusic .star{
+        top: 37%;
+        height: 24%;
     }
 }
 
