--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ div.top-songs{
 
 div.gospel{
     width: 100%;
+    position: relative;
 }
 
 div.gospel img{
@@ -296,6 +297,7 @@ div.gospel img{
 
 div.hip-hop{
     width: 100%;
+    position: relative;
 }
 
 div.hip-hop img{
@@ -307,7 +309,8 @@ div.hip-hop img{
 }
 
 div.jazz{
-    width: 100%;
+    width: 200%;
+    position: relative;
     /* display: flex; */
 }
 
@@ -322,6 +325,8 @@ div.jazz img{
 
 div.rnb{
     width: 100%;
+    height: 198%;
+    position: relative;
     /* display: flex; */
     margin-right: auto;
 }
@@ -345,17 +350,50 @@ div.hip-hop img.img-hip{
 
 div.rnb img.img-rnb{
     grid-area: img-rnb;
-    min-height: 198%;
+    min-height: 100%;
 }
 
 div.jazz img.img-jazz{
     grid-area: img-jazz;
-    min-width: 200%;
+    min-width: 100%;
 }
 
-div.top-songs a{
+/************Adding transparent hover feature on each music genre************/
+
+div.tc-hover{
+    background: transparent;
+    height: 99%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+    padding: 5px;
+}
+
+div.tc-hover:hover{
+    background: rgba(211, 213, 218, 0.801);
+}
+
+div.tc-hover h3{
+    width: 100%;
+    color: #333;
+    font-size: 20px;
+    font-weight: 700;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
     transition: 0.5s;
 }
+
+div.tc-hover:hover h3{
+    bottom: 49%;
+    opacity: 1;
+}
+
+
 
 
 
@@ -529,6 +567,7 @@ div.top-songs a{
 
     div.rnb{
         width: 100%;
+        height: 100%;
     }
 
     div.rnb img{
@@ -551,6 +590,11 @@ div.top-songs a{
     div.jazz img.img-jazz{
         min-width: 100%;
     }
+
+    /************Adding transparent hover feature on each music genre************/
+    div.tc-hover:hover{
+        font-size: 14px;
+    } 
 }
 
 
