--- a/style.css
+++ b/style.css
@@ -361,35 +361,38 @@ div.jazz img.img-jazz{
 /************Adding transparent hover feature on each music genre************/
 
 div.tc-hover{
-    background: transparent;
-    height: 99%;
-    width: 100%;
+    background: rgba(211, 213, 218, 0.801);
+    height: 22%;
+    width: 98.8%;
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 5px;
+    left: 3px;
+    align-items: center;
     border-radius: 15px;
     padding: 5px;
-}
-
-div.tc-hover:hover{
-    background: rgba(211, 213, 218, 0.801);
+    transition: 0.5s;
 }
 
 div.tc-hover h3{
     width: 100%;
     color: #333;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
-    bottom: 0;
+    top: 35%;
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
-    opacity: 0;
+    opacity: 1;
     transition: 0.5s;
 }
 
+div.tc-hover:hover{
+    background: rgba(211, 213, 218, 0.801);
+    height: 98%;
+}
+
 div.tc-hover:hover h3{
-    bottom: 49%;
+    top: 49%;
     opacity: 1;
 }
 
@@ -528,7 +531,7 @@ div.tc-hover:hover h3{
     /***************Top charts page********************/
 
     .charts{
-        padding-top: 40px;
+        padding-top: 50px;
     }
 
     .charts h3{
@@ -555,6 +558,7 @@ div.tc-hover:hover h3{
 
     div.gospel img{
         height: 150px;
+        object-fit: cover;
     }
 
     div.hip-hop {
@@ -592,9 +596,36 @@ div.tc-hover:hover h3{
     }
 
     /************Adding transparent hover feature on each music genre************/
+    div.tc-hover{
+        background: rgba(211, 213, 218, 0.801);
+        height: 22%;
+        width: 97.7%;
+        bottom: 6px;
+        left: 3px;
+    }
+
     div.tc-hover:hover{
         font-size: 14px;
-    } 
+    }
+
+    div.tc-hover h3{
+        font-size: 14px;
+        bottom: 49%;
+    }
+
+    div.tc-hover:hover h3{
+        bottom: 49%;
+    }
+
+    div.tc-hover:active{
+        background: rgba(211, 213, 218, 0.801);
+    }
+
+    div.tc-hover:active h3{
+        font-size: 14px;
+        opacity: 1;
+        bottom: 49%;
+    }
 }
 
 
