--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Aleo', serif;
+    scroll-behavior: smooth;
 }
 
 .header{
@@ -420,8 +421,6 @@ section.testimonials p{
 
 div.row{
     display: flex;
-    margin-top: 4%;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -435,6 +434,11 @@ div.testimonial-col{
     padding: 25px;
     background: #333;
     cursor: pointer;
+    transition: 0.5s;
+}
+
+div.testimonial-col:hover{
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.7);
 }
 
 div.testimonial-col img{
@@ -455,6 +459,94 @@ div.testimonial-col h3{
     color: #fff;
     font-size: 18px;
     margin-top: 10px;
+}
+
+/************Contact Us web section****************/
+
+section.contact{
+    display: flex;
+    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 5%;
+}
+
+div.contact-container{
+    display: flex;
+    width: 100%;
+    margin: auto;
+    text-align: left;
+    align-items: center;
+}
+
+div.contact-box{
+    display: flex;
+    width: 50%;
+    background: #333;
+}
+
+div.contact-text{
+    width: 70%;
+    height: 200px;
+    margin-right: auto;
+    background: #333;
+}
+
+div.contact-text h3{
+    font-size: 72px;
+    line-height: 80px;
+    font-weight: 700;
+    text-align: center;
+    transform: translateY(10%);
+    margin-left: 40%;
+    color: #fff;
+    height: 100%;
+}
+
+/****************css for form***************/
+div.form{
+    display: flex;
+    width: 58%;
+    z-index: 1;
+}
+
+form{
+    background: rgba(255, 255, 255, 0.705);
+    display: flex;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    width: 100%;
+    max-width: 700px;
+    border-radius: 10px;
+    box-shadow:  0 0 20px 0  rgba(51, 51, 51, 0.329);
+}
+
+form input, form textarea{
+    border: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: none;
+    background: #f5f5f5;
+    font-size: 14px;
+}
+
+form button{
+    padding: 15px;
+    background: #333;
+    color: #fff;
+    font-size: 16px;
+    border: 0;
+    outline: none;
+    margin: 20px auto 0;
+    width: 150px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+div.box{
+    display: flex;
+    background: #333;
+    height: 200px;
+    width: 10%;
 }
 
 
@@ -691,6 +783,7 @@ div.testimonial-col h3{
     /*-- ----------Testimonials web section--------- -- */
     section.testimonials{
         padding-top: 60px;
+        margin-bottom: 5%;
     }
 
     section.testimonials h3{
@@ -701,6 +794,84 @@ div.testimonial-col h3{
         font-size: 14px;
         line-height: 14px;
         padding: 6px;
+    }
+
+    div.row{
+        display: block;
+        margin-top: 3%;
+    }
+
+    div.testimonial-col{
+        flex-basis: 99%;
+        border-radius: 10px;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        padding: 10px;
+    }
+
+    div.testimonial-col img{
+        height: 40px;
+        margin-left: 3px;
+        margin-right: 20px;
+        border-radius: 50%;
+        padding: 6px;
+    }
+
+    div.testimonial-col p{
+        font-size: 14px;
+        line-height: 14px;
+        padding-left: 0;
+    }
+
+    div.testimonial-col h3{
+        font-size: 14px;
+        margin-top: 7px;
+        margin-bottom: 3px;
+    }
+
+    /************Contact Us web section****************/
+
+    section.contact{
+        margin-top: 70px;
+    }
+
+    div.contact-container{
+        flex-direction: column;
+    }
+
+    div.contact-box{
+        width: 80%;
+    }
+
+    div.contact-text{
+        height: 80px;
+    }
+
+    div.contact-text h3{
+        font-size: 30px;
+        line-height: 30px;
+    }
+
+    /****************css for form***************/
+
+    div.form{
+        width: 78%;
+        margin-bottom: 5%;
+    }
+
+    form input, form textarea{
+        padding: 14px;
+    }
+
+    form button{
+        padding: 10px;
+        margin: 15px auto 5px;
+        width: 100px;
+
+    }
+
+    div.box{
+        display: none;
     }
 }
 
